Added CMakeLists.txt for the root, server, client and commons path. Also included sockets related classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.12)
-project(CLion_Project)
+project(Dune)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -pedantic -pthread -Werror")
 
-add_executable(CLion_Project server/main.cpp)
+add_subdirectory(server)
+add_subdirectory(client)
+add_subdirectory(commons)
