Removed ambiguity from std::abs method. Added Terrain, Matrix and the rest of files to the corresponding CMake file

--- a/commons/CMakeLists.txt
+++ b/commons/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_library(commons socket_t.c Socket.cpp ClientClosedSocketException.cpp ConnectionRefusedException.cpp)
+add_library(commons socket_t.c Socket.cpp ClientClosedSocketException.cpp
+        ConnectionRefusedException.cpp BadFileException.cpp)
 
 install(TARGETS commons
         LIBRARY DESTINATION lib
