--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(server main.cpp PathFinder.cpp Matrix.cpp Terrain.cpp)
+add_executable(server main.cpp PathFinder.cpp Matrix.cpp Terrain.cpp Accepter.cpp Client.cpp)
 
 include_directories(${CMAKE_SOURCE_DIR}/commons) # include files from commons
 target_link_libraries(server commons)
