server creates 1 game with event loop

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -19,6 +19,8 @@ add_executable(server
         game/Terrain.cpp
         game/Accepter.cpp
         game/Client.cpp
+        game/Game.cpp
+        game/Unit.cpp
         editor/src/Editor.cpp
         editor/src/TerrainCellWidget.cpp)
 
