Added server configuration parsing

--- a/commons/CMakeLists.txt
+++ b/commons/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(commons Socket.cpp SOException.cpp BadFileException.cpp Thread.cpp Lock.cpp)
+add_library(commons Socket.cpp SOException.cpp BadFileException.cpp Thread.cpp Lock.cpp json.hpp)
 
 install(TARGETS commons
         LIBRARY DESTINATION lib
