--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,16 +1,7 @@
 # Find includes in corresponding build directories
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-# Instruct CMake to run moc automatically when needed
-set(CMAKE_AUTOMOC ON)
-# Create code from a list of Qt designer ui files
-set(CMAKE_AUTOUIC ON)
-set(CMAKE_AUTOUIC_SEARCH_PATHS editor/ui)
-
-# Find the QtWidgets library
-find_package(Qt5Widgets CONFIG REQUIRED)
 
 include_directories(${CMAKE_SOURCE_DIR}/commons) # include files from commons
-include_directories(editor/include) # include files from the editor
 
 add_executable(server
         main.cpp
@@ -26,10 +17,8 @@ add_executable(server
         game/model/Unit.cpp
         game/model/TileUtils.cpp
         game/model/Weapon.h
-        game/model/Soldier.h
-        editor/src/Editor.cpp
-        editor/src/TerrainCellWidget.cpp )
+        game/model/Soldier.h)
 
-target_link_libraries(server commons Qt5::Widgets)
+target_link_libraries(server commons)
 
 install(TARGETS server RUNTIME DESTINATION bin)
