--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 3.12)
 project(Dune)
 
 # Set C++ Compiler Flags
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -pedantic -pthread -ggdb -DJSON_MultipleHeaders=ON")
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -pthread -ggdb -DJSON_MultipleHeaders=ON")
 
 add_subdirectory(server)
 add_subdirectory(client)
