Created JSONUtils with function to transform string to JSON and moved to a custom namespace. Created Map class with only one attribute called Terrain. Added filtering for the files from the directory by extension .map

--- a/commons/CMakeLists.txt
+++ b/commons/CMakeLists.txt
@@ -1,4 +1,11 @@
-add_library(commons Socket.cpp SOException.cpp BadFileException.cpp Thread.cpp Lock.cpp json.hpp)
+add_library(commons
+        Socket.cpp
+        SOException.cpp
+        BadFileException.cpp
+        Thread.cpp
+        Lock.cpp
+        JSONUtils.cpp
+        json.hpp)
 
 install(TARGETS commons
         LIBRARY DESTINATION lib
