--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -5,19 +5,18 @@ include_directories(${CMAKE_SOURCE_DIR}/commons) # include files from commons
 
 add_executable(server
         main.cpp
-        game/model/PathFinder.cpp
+        game/model/Map.cpp
         game/model/Matrix.cpp
+        game/model/PathFinder.cpp
         game/model/Point.cpp
         game/model/Terrain.cpp
+        game/model/TileUtils.cpp
+        game/model/Unit.cpp
         game/arch/Accepter.cpp
         game/arch/Client.cpp
         game/arch/Game.cpp
-        game/arch/Server.cpp
         game/arch/GameConfiguration.cpp
-        game/model/Unit.cpp
-        game/model/TileUtils.cpp
-        game/model/Weapon.h
-        game/model/Soldier.h)
+        game/arch/Server.cpp)
 
 target_link_libraries(server commons)
 
