Moved Point, Terrain and Matrix to commons because the matrix is needed in the client. Modified map to have a bigger one, created basic renderization map with all the terrains

--- a/commons/CMakeLists.txt
+++ b/commons/CMakeLists.txt
@@ -4,6 +4,9 @@ add_library(commons
         BadFileException.cpp
         Thread.cpp
         Lock.cpp
+        Matrix.cpp
+        Point.cpp
+        Terrain.cpp
         JSONUtils.cpp
         json.hpp)
 
