--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Dune)
 
 # Set C++ Compiler Flags
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -pthread -ggdb -DJSON_MultipleHeaders=ON")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -pthread -DJSON_MultipleHeaders=ON")
 
 add_subdirectory(server)
 add_subdirectory(client)
