Basic movement from one unit

--- a/commons/CMakeLists.txt
+++ b/commons/CMakeLists.txt
@@ -1,14 +1,19 @@
 add_library(commons
+        BadFileException.cpp
+        Event.cpp
+        json.hpp
+        JSONUtils.cpp
+        Lock.cpp
+        Map.cpp
+        Matrix.cpp
+        PathFinder.cpp
+        Point.cpp
         Socket.cpp
         SOException.cpp
-        BadFileException.cpp
-        Thread.cpp
-        Lock.cpp
-        Matrix.cpp
-        Point.cpp
         Terrain.cpp
-        JSONUtils.cpp
-        json.hpp)
+        Thread.cpp
+        TileUtils.cpp
+        Unit.cpp Event.cpp Event.h)
 
 install(TARGETS commons
         LIBRARY DESTINATION lib
