Several changes to use json as fprotocol between server and client. Map being communicated from server to client, as well as the positions from the test unit

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -8,7 +8,7 @@ add_executable(client
     Area.cpp
     SdlTexture.cpp
     SdlException.cpp
-    SdlWindow.cpp)
+    SdlWindow.cpp Client.cpp)
 
 # Include files from SDL2
 include_directories(
