--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -5,9 +5,9 @@ include_directories(${CMAKE_SOURCE_DIR}/commons) # include files from commons
 
 add_executable(server
         main.cpp
-        game/arch/Accepter.cpp
-        game/arch/Client.cpp
-        game/arch/Game.cpp
+        game/arch/AccepterThread.cpp
+        game/arch/ClientThread.cpp
+        game/arch/GameThread.cpp
         game/arch/GameConfiguration.cpp
         game/arch/Server.cpp)
 
