--- a/commons/CMakeLists.txt
+++ b/commons/CMakeLists.txt
@@ -1,6 +1,5 @@
 add_library(commons
         BadFileException.cpp
-        Event.cpp
         json.hpp
         JSONUtils.cpp
         Lock.cpp
@@ -12,8 +11,7 @@ add_library(commons
         SOException.cpp
         Terrain.cpp
         Thread.cpp
-        TileUtils.cpp
-        Unit.cpp Event.cpp Event.h)
+        TileUtils.cpp)
 
 install(TARGETS commons
         LIBRARY DESTINATION lib
