Initial draft with the new type of event, sending a dummy picturable from the Server side, fetching it on the Client side and draw all the SdlPicturables

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(client
     Client.cpp
     SdlException.cpp
     SdlTexture.cpp
-    SdlWindow.cpp)
+    SdlWindow.cpp SdlPicturable.cpp SdlPicturable.h)
 
 # Include files from SDL2
 include_directories(
