--- a/commons/CMakeLists.txt
+++ b/commons/CMakeLists.txt
@@ -1,18 +1,21 @@
 add_library(commons
         BadFileException.cpp
-        Event.cpp
-        EventHandler.cpp
-        json.hpp
-        JSONConversion.cpp
-        JSONUtils.cpp
+        events/ClientEvent.cpp
+        events/EventHandler.cpp
+        json/json.hpp
+        json/JSONConversion.cpp
+        json/JSONUtils.cpp
         Lock.cpp
         Matrix.cpp
         Point.cpp
         Socket.cpp
         SOException.cpp
         Thread.cpp
-        MapConfigurationEvent.cpp
-        TileUtils.cpp)
+        TileUtils.cpp
+        events/MapConfigurationEvent.cpp
+        events/GameStatusEvent.cpp
+        Picturable.cpp
+        events/NotificationEvent.cpp)
 
 install(TARGETS commons
         LIBRARY DESTINATION lib
