Update Server Accepter and Game classes

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -5,11 +5,12 @@ include_directories(${CMAKE_SOURCE_DIR}/commons) # include files from commons
 
 add_executable(server
         main.cpp
-        game/arch/AccepterThread.cpp
+        game/arch/Accepter.cpp
         game/arch/ClientThread.cpp
         game/arch/GameConfiguration.cpp
-        game/arch/GameThread.cpp
-        game/arch/Server.cpp
+        game/arch/ConfigMap.cpp
+        game/arch/Game.cpp
+        game/arch/ServerThread.cpp
         game/model/WalkingUnit.cpp
         game/model/Terrain.cpp)
 
