Added logic to handle left and right clicks. Divided client into different classes. Some other changes to the models

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -5,11 +5,13 @@ find_package(SDL2_image REQUIRED)
 
 add_executable(client
     main.cpp
-    Area.cpp
-    Client.cpp
-    SdlException.cpp
-    SdlTexture.cpp
-    SdlWindow.cpp SdlPicturable.cpp SdlPicturable.h)
+        game/arch/Area.cpp
+        game/arch/Client.cpp
+        game/arch/MainWindow.cpp
+        game/sdl/SdlException.cpp
+        game/arch/SdlPicturable.cpp
+        game/sdl/SdlTexture.cpp
+        game/sdl/SdlWindow.cpp game/arch/Game.cpp game/arch/Game.h)
 
 # Include files from SDL2
 include_directories(
