Divided client into three different threads and master. Also created Client class inside main thread

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -6,12 +6,14 @@ find_package(SDL2_image REQUIRED)
 add_executable(client
     main.cpp
         game/arch/Area.cpp
-        game/arch/ClientThread.cpp
+        game/arch/EventsLooperThread.cpp
+        game/arch/EventsReceptorThread.cpp
+        game/arch/EventsSenderThread.cpp
         game/arch/MainWindow.cpp
         game/sdl/SdlException.cpp
         game/arch/SdlPicturable.cpp
         game/sdl/SdlTexture.cpp
-        game/sdl/SdlWindow.cpp game/arch/GameThread.cpp game/arch/GameThread.h)
+        game/sdl/SdlWindow.cpp game/arch/Client.cpp game/arch/Client.h)
 
 # Include files from SDL2
 include_directories(
