--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -6,14 +6,16 @@ find_package(SDL2_image REQUIRED)
 add_executable(client
     main.cpp
         game/arch/Area.cpp
+        game/arch/BlockingQueue.hpp
+        game/arch/Client.cpp
         game/arch/EventsLooperThread.cpp
         game/arch/EventsReceptorThread.cpp
         game/arch/EventsSenderThread.cpp
         game/arch/MainWindow.cpp
-        game/sdl/SdlException.cpp
         game/arch/SdlPicturable.cpp
+        game/sdl/SdlException.cpp
         game/sdl/SdlTexture.cpp
-        game/sdl/SdlWindow.cpp game/arch/Client.cpp game/arch/Client.h)
+        game/sdl/SdlWindow.cpp)
 
 # Include files from SDL2
 include_directories(
