Add Cosechadora to model and is respective creation event

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(server
         game/model/GameObject.cpp
         game/model/WalkingUnit.cpp
         game/model/Building.cpp
+        game/model/Cosechadora.cpp
         game/model/Map.cpp)
 
 target_link_libraries(server commons)
