--- a/resources/config/Game Configuration.json
+++ b/resources/config/Game Configuration.json
@@ -19,52 +19,63 @@
   ],
   "weapons": [
       {
-        "assault_sniper": {
+        "rifle_de_asalto": {
           "damage": 2,
-          "shoot_frequency": 6,
+          "shot_frequency": 6,
           "bonus": 1
         },
-        "rocket_launcher": {
+        "lanza_misiles": {
           "damage": 8,
-          "shoot_frequency": 1,
+          "shot_frequency": 1,
           "bonus": 0
+        },
+        "cañon_22_mm": {
+          "damage": 6,
+          "shot_frequency": 6,
+          "bonus": 2
         }
       }
   ],
-  "soldiers": [
+  "attacking_units": [
       {
-        "light_infantry": {
-          "level": 3,
+        "infanteria_ligera": {
+          "range": 3,
           "speed": 16,
           "training_time": 1,
           "cost": 50,
-          "life": 50
+          "health": 50,
+          "armamento": "rifle_de_asalto"
         },
-        "heavy_infantry": {
-          "level": 3,
+        "infanteria_pesada": {
+          "range": 3,
           "speed": 12,
           "training_time": 1.3,
           "cost": 70,
-          "life": 80
+          "health": 80,
+          "armamento": "lanza_misiles"
+        },
+        "trike": {
+          "range": 4,
+          "speed": 64,
+          "training_time": 2,
+          "cost": 100,
+          "health": 80,
+          "armamento": "rifle_de_asalto"
+        },
+        "raider": {
+          "range": 4,
+          "speed": 84,
+          "training_time": 2,
+          "cost": 100,
+          "health": 80,
+          "armamento": "cañon_22_mm"
         }
       }
   ],
-  "vehicles": [
-      {
-        "trike": {
-          "level": 4,
-          "speed": 64,
-          "build_time": 2,
-          "cost": 100,
-          "life": 80
-        },
-        "raider": {
-          "level": 4,
-          "speed": 84,
-          "build_time": 2,
-          "cost": 100,
-          "life": 80
-        }
-      }
-  ]
+  "cosechadora": {
+    "speed": 12,
+    "training_time": 3,
+    "cost": 300,
+    "health": 600
+  }
 }
