Map path is now part of server.conf

--- a/server.conf
+++ b/server.conf
@@ -1,4 +1,4 @@
 port=8080
-maps_path=resources/maps
+map_path=resources/maps/new_map.json
 units_properties_file_path=resources/config/Game Configuration.json
 game_size=2
